--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   carousel_slider: ^4.0.0
   curved_navigation_bar: ^1.0.1
+  intl: ^0.16.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
