--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   bubble: ^1.2.1
   http: ^0.13.3
   rflutter_alert: ^2.0.4
+  syncfusion_flutter_datepicker: ^19.3.44
+  infinite_scroll_pagination: ^3.1.0
+  top_snackbar_flutter: ^1.0.1
+  jiffy: ^4.1.0
  
 dev_dependencies:
   flutter_test:
