--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   top_snackbar_flutter: ^1.0.1
   jiffy: ^4.1.0
   badges: ^2.0.1
+  # geolocator: ^7.7.0
+  location: ^4.3.0
   currency_icons: ^0.3.0
  
 dev_dependencies:
